tests/lean/instance1.lean.expected.out
instance1.lean:6:24-6:29: error: fields missing: 'pure', 'bind'
